Add RouteViewer controls, start on Route creation

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Freeclimbs</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://indestructible​type.com​/fonts/Besley.css" type="text/css" charset="utf-8" />
