--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Freeclimbs</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://indestructible​type.com​/fonts/Besley.css" type="text/css" charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/main.css">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="/fonts.css" type="text/css" charset="utf-8" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
